# JNILearnCmake

./: README.md  settings.gradle  sign.jks
app/: build.gradle
app/src/androidTest/java/com/hwilliam/jnilearncmake/: ExampleInstrumentedTest.kt  NDKToolsTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  const.h  libB.c  native-lib.c
app/src/main/java/com/hwilliam/jnilearncmake/: App.kt  AudioCodec.kt  AudioRecordActivity.kt  MainActivity.kt  NDKTools.java  NDKToolsObject.java  PcmRecorder.kt  SimplePcmPlayer.kt
app/src/main/res/layout/: activity_audio_record.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/hwilliam/jnilearncmake/: ExampleUnitTest.kt
ffmpegprebuild/: build.gradle
ffmpegprebuild/src/androidTest/java/com/hwilliamgo/ffmpegprebuild/: ExampleInstrumentedTest.kt
ffmpegprebuild/src/main/: AndroidManifest.xml
ffmpegprebuild/src/main/cpp/: CMakeLists.txt  ff.c
ffmpegprebuild/src/main/cpp/include/libavutil/: ffversion.h
ffmpegprebuild/src/main/java/com/hwilliamgo/ffmpegprebuild/: FFMpegUtils.java
ffmpegprebuild/src/main/res/values/: strings.xml
ffmpegprebuild/src/test/java/com/hwilliamgo/ffmpegprebuild/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lame/: build.gradle
lame/src/androidTest/java/com/example/lame/: ExampleInstrumentedTest.kt
lame/src/main/: AndroidManifest.xml
lame/src/main/cpp/: CMakeLists.txt  lame.c  mp3Encoder.c  mp3Encoder.h
lame/src/main/cpp/libmp3lame/: CMakeLists.txt  id3tag.c
lame/src/main/java/com/example/lame/: Mp3Encoder.java
lame/src/test/java/com/example/lame/: ExampleUnitTest.kt
opensles/: build.gradle
opensles/src/androidTest/java/com/hwilliamgo/opensles/: ExampleInstrumentedTest.kt
opensles/src/main/: AndroidManifest.xml
opensles/src/main/cpp/: CMakeLists.txt  api.c
opensles/src/main/res/values/: strings.xml
opensles/src/test/java/com/hwilliamgo/opensles/: ExampleUnitTest.kt
